--- a/index.html
+++ b/index.html
@@ -336,26 +336,18 @@
                           <br />
                           <span  v-if="settings.footer.preset.disclaimer.logo">
                             <br />
-                          This is not an official publication of Manulife Wealth. The views, opinions, and recommendations are those of the author alone and they may not
-                          necessarily be those of Manulife Wealth or the advisor(s). This publication is not an offer to sell or a solicitation of an offer to buy any securities. This
-                          publication is not meant to provide legal, accounting or account advice. As each situation is different, you should seek advice based on your specific
-                          circumstances. Please call to arrange for an appointment. The information contained herein was obtained from sources believed to be reliable; however, no
-                          representation or warranty, express or implied, is made by the writer, Manulife Wealth or any other person as to its accuracy, completeness or
-                          correctness.
-                        
+                            This publication contains opinions of the writer and may not reflect opinions of the Advisor and Manulife Wealth Inc. and/or Manulife Wealth Insurance Services Inc. (collectively, “Manulife Wealth"). The information contained herein was obtained from sources believed to be reliable.
+                             No representation, or warranty, express or implied, is made by the writer, Manulife Wealth or any other person as to its accuracy, completeness or correctness. This publication is not an offer to sell or a solicitation of an offer to buy any of the securities. The securities discussed in this publication may not be eligible for sale in some jurisdictions. If you are not a Canadian resident, this report should not have been delivered to you. This publication is not meant to provide legal, financial, tax or investment advice. As each situation is different, you should consult your own professional advisors for advice based on your specific circumstances.
                           <br />
                           <br />
                           <img
-                            :src="isLight(styles.footer.textColor) ? 'https://static.twentyoverten.com/601b05ba1f9c8f1a03ec1075/pLHufCmY2T8/Manulife_Wealth_linear_white.png' : 'https://static.twentyoverten.com/601b05ba1f9c8f1a03ec1075/OnnY_w9K4bF/Manulife_Wealth_linear_cmyk.png'"
+                            :src="isLight(styles.footer.textColor) ? 'https://library.siteforward.ca/images/english/Manulife_Wealth_linear_reversed_cmyk.png' : 'https://library.siteforward.ca/images/english/Manulife_Wealth_linear_cmyk.png'"
                             width="350"
                             height="auto"
                           /><br />
                           <em
-                            ><a href="https://www.manulifesecurities.ca/corporate-disclaimers.html" target="_blank" :style="{color: styles.footer.linkColor}"
-                              >Legal and Disclaimers</a
-                            >
-                            |
-                            <a href="https://www.manulife.ca/privacy-policies.html" target="_blank" :style="{color: styles.footer.linkColor}">Privacy Policy</a></em
+                            ><a href="https://www.manulifewealth.ca/clients/en/corporate-disclaimers" target="_blank" :style="{color: styles.footer.linkColor}"
+                              >Legal and Disclaimers | Privacy Policy</a></em
                           >
                         </span>
                         </p>
